--- a/Themes/fairyfloss.css
+++ b/Themes/fairyfloss.css
@@ -135,10 +135,10 @@ link {
 
 /* Values */
 value.boolean {
-  color: hsb(210, 60%, 100%);
+  color: #c5a3ff;
 }
 value.null {
-  color: hsb(210, 60%, 100%);
+  color: #c5a3ff;
 }
 value.number {
   color: #c5a3ff;
@@ -159,19 +159,19 @@ identifier.constant {
 }
 identifier.global,
 identifier.variable {
-  color: hsb(268, 34%, 100%);
 }
 identifier.property,
 identifier.decorator,
 identifier.function,
 identifier.method {
-  color: hsb(166, 40%, 78%);
+  color: #fff352;
 }
 identifier.key {
   color: hsb(210, 60%, 100%);
 }
 identifier.argument {
-  color: hsb(268, 34%, 100%);
+  color: #ff857f;
+  font-style: italic;
 }
 
 /* Strings */
